src/snapshots/ghqctoolkit__configuration__tests__backtick_txt_checklist.snap
---
source: src/configuration.rs
expression: "&config.checklists[\"Complex Checklist Name\"]"
---
# Complex Checklist Name

This checklist has spaces in the name
And multiple lines
Of content
