src/snapshots/ghqctoolkit__configuration__tests__configuration_status_dirty.snap
---
source: src/configuration.rs
expression: result_dirty
---
== Directory Information ==
📁 directory: src/tests/custom_configuration
📦 git repository: test-owner/test-repo
❌ Repository has files with uncommitted, local changes: 
	- src/main.rs
	- README.md
📋 Custom Quality Check available in 'my_custom_checklists': 2
⚠️ Logo was not found at the specified path assets/custom_logo.svg
        
== Custom Quality Check Summary ==
📌 checklist note: 
│  Please review carefully

- Custom Checklist: 3 checklist items
- Custom: 1 checklist items
