src/snapshots/ghqctoolkit__configuration__tests__custom_directory_checklist.snap
---
source: src/configuration.rs
expression: custom_content
---
# Custom Checklist

Please review carefully

- [ ] Custom item 1
- [ ] Custom item 2
- [ ] Custom item 3
