src/snapshots/ghqctoolkit__configuration__tests__default_custom.snap
---
source: src/configuration.rs
expression: "&config.checklists[\"Custom\"]"
---
# Custom

- [ ] [INSERT]
