src/snapshots/ghqctoolkit__configuration__tests__simple_txt_checklist.snap
---
source: src/configuration.rs
expression: "&config.checklists[\"simple_checklist\"]"
---
# simple_checklist

This is a plain text checklist
Item 1
Item 2
Item 3
