src/snapshots/ghqctoolkit__configuration__tests__simple_yaml_checklist.snap
---
source: src/configuration.rs
expression: "&config.checklists[\"Simple Tasks\"]"
---
# Simple Tasks

- [ ] Review code changes
- [ ] Run unit tests
- [ ] Update documentation
- [ ] Deploy to staging
